week-6/vpc.tf
resource "aws_vpc" "main" {
  cidr_block = "10.0.0.0/16"
  enable_dns_support = true
  enable_dns_hostnames = true
}

resource "aws_subnet" "public-subnet1" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.1.0/24"
  map_public_ip_on_launch = true
  availability_zone = "us-west-2a"

  tags = {
    Name = "public subnet 1"
  }
}

resource "aws_subnet" "public-subnet2" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.2.0/24"
  map_public_ip_on_launch = true
  availability_zone = "us-west-2b"

  tags = {
    Name = "public subnet 2"
  }
}

resource "aws_subnet" "private-subnet1" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.3.0/24"
  availability_zone = "us-west-2a"

  tags = {
    Name = "private subnet 1"
  }
}

resource "aws_subnet" "private-subnet2" {
  vpc_id     = aws_vpc.main.id
  cidr_block = "10.0.4.0/24"
  availability_zone = "us-west-2b"

  tags = {
    Name = "private subnet 2"
  }
}

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "main gateway"
  }
}

resource "aws_route_table" "route-to-gw" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "route to gateway"
  }
}

resource "aws_route_table_association" "a1" {
  subnet_id      = aws_subnet.public-subnet1.id
  route_table_id = aws_route_table.route-to-gw.id
}

resource "aws_route_table_association" "a2" {
  subnet_id      = aws_subnet.public-subnet2.id
  route_table_id = aws_route_table.route-to-gw.id
}

resource "aws_route_table" "route-to-nat" {
  vpc_id = aws_vpc.main.id

  route {
    
    cidr_block = "0.0.0.0/0"
    instance_id = aws_instance.nat-instance.id
  }

  tags = {
    Name = "route to nat"
  }
}

resource "aws_route_table_association" "b1" {
  subnet_id      = aws_subnet.private-subnet1.id
  route_table_id = aws_route_table.route-to-nat.id
}

resource "aws_route_table_association" "b2" {
  subnet_id      = aws_subnet.private-subnet2.id
  route_table_id = aws_route_table.route-to-nat.id
}
